ajustes action formularios

--- a/entrar.html
+++ b/entrar.html
@@ -68,14 +68,14 @@
             </div> 
             <p class="text-center">Tecnologia para Administração de Condomínios</p>           
             <hr>
-            <form action="#" method="post">
+            <form action="https://www.soaresinf.com.br/logar.php" method="post">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text" id="basic-addon1">
                         <i class="fa-regular fa-circle-user"></i>
                       </span>
                     </div>
-                    <input type="email" class="form-control" placeholder="Digite seu usuário" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control" placeholder="Digite seu usuário" aria-label="Username" aria-describedby="basic-addon1" name="usuario" id="usuario">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -83,7 +83,7 @@
                             <i class="fa-sharp fa-solid fa-lock"></i>
                         </span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Digite sua senha" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="password" class="form-control" placeholder="Digite sua senha" aria-label="Username" aria-describedby="basic-addon1" name="senha" id="senha">
                 </div>
                 <div class="input-group mb-3">
                     <input type="submit" class="btn btn-primary" value="Entrar">
