--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
           </li>
         </ul>
       </div>
-      <form class="form-contato" action="#" method="post">
+      <form class="form-contato" action="enviaEmail.php" method="post">
         <legend>Contate-nos agora!</legend>
         <label for="name">Nome: </label>
         <input type="text" name="nome" id="name" placeholder="Digite seu nome aqui">
