--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <!-- Article -->
         <article class="d-flex flex-wrap text-center g-font-size-16">
           <div class="flex-last w-100">
-            <img class="w-100" src="./img/moradores.png" alt="Image Description">
+            <img class="w-100 h-75" src="./img/moradores.png" alt="Image Description">
           </div>
           <div class="flex-first w-100 u-ns-bg-v1-bottom g-z-index-1 g-py-50 g-px-50 div_ferramentas_1">
             <h3 class="h5 text-uppercase g-mb-20 titulo_ferramentas_2">Moradores</h3>
@@ -528,7 +528,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/correspondencia.png); background-size: cover;"></div>
+              style="background-image: url(./img/correspondencia.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -551,7 +551,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/chamados.png); background-size: cover;"></div>
+              style="background-image: url(./img/chamados.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -574,7 +574,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/noticias.png); background-size: cover;"></div>
+              style="background-image: url(./img/noticias.png);background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -596,7 +596,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/notificacoes.png); background-size: cover;"></div>
+              style="background-image: url(./img/notificacoes.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -618,7 +618,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/enquetes.png);background-size: cover;"></div>
+              style="background-image: url(./img/enquetes.png);background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -640,7 +640,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/tarefas.png);background-size: cover;"></div>
+              style="background-image: url(./img/tarefas.png);background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -661,7 +661,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/classificados.png); background-size: cover;"></div>
+              style="background-image: url(./img/classificados.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -683,7 +683,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/documentos.png); background-size: cover;"></div>
+              style="background-image: url(./img/documentos.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -704,7 +704,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/obras.png); background-size: cover;"></div>
+              style="background-image: url(./img/obras.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -726,7 +726,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/autorizacao.png); background-size: cover;"></div>
+              style="background-image: url(./img/autorizacao.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -748,7 +748,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/veiculos.png); background-size: cover;"></div>
+              style="background-image: url(./img/veiculos.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
@@ -769,7 +769,7 @@
           <!-- Article Image -->
           <div class="col-sm-5 g-px-0--sm">
             <div class="g-height-280 g-rounded-3"
-              style="background-image: url(./img/comercio.png); background-size: cover;"></div>
+              style="background-image: url(./img/comercio.png); background-repeat: no-repeat;"></div>
           </div>
           <!-- End Article Image -->
 
